# Student-enrollment-bottleneck-detection-system

./: README.md
Student enrollment bottleneck system/: Makefile  README.md  config.py  main.py  pyproject.toml
Student enrollment bottleneck system/app/: __init__.py  models.py  routes.py
Student enrollment bottleneck system/app/static/css/: style.css
Student enrollment bottleneck system/app/static/js/: payment.js  realtime.js
Student enrollment bottleneck system/app/templates/: add_student.html  admin_dashboard.html  base.html  courses.html  dashboard.html  enroll_new.html  enrollments.html  login.html  logs.html  my_enrollments.html  my_payments.html  payment_new.html  payments.html  predictions.html  register.html  student_dashboard.html  students.html
Student enrollment bottleneck system/ml/: bottleneck_detector.py  evaluate.py  lstm_model.py  preprocessing.py  random_forest.py  retrain_worker.py  train_models.py
Student enrollment bottleneck system/scripts/: load_test.py  seed_data.py
