[project]
name = "enrollment-system-blessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.21.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]
